<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            tools:context=".MovieFragment">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_emovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/emovie_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/background_dotted"
                app:layout_constraintBottom_toBottomOf="@+id/iv_emovie"
                app:layout_constraintEnd_toEndOf="@+id/iv_emovie"
                app:layout_constraintStart_toStartOf="@id/iv_emovie"
                app:layout_constraintTop_toTopOf="@id/iv_emovie" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_emovie">

                <include
                    android:id="@+id/include"
                    layout="@layout/search_bar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint"
                tools:layout_height="400dp" />

            <TextView
                android:id="@+id/tv_recommended_for_you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recomendados_para_ti"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_tittle_movies"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_movies" />

            <RadioGroup
                android:id="@+id/rg_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_recommended_for_you">

                <RadioButton
                    android:id="@+id/rb_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_selector"
                    android:button="@android:color/transparent"
                    android:text="@string/idioma"
                    android:textColor="@color/radio_flat_color_selector" />

                <RadioButton
                    android:id="@+id/rb_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/radio_button_selector"
                    android:button="@android:color/transparent"
                    android:text="@string/fecha"
                    android:textColor="@color/radio_flat_color_selector" />

            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_recommemded_for_you"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_selector"
                tools:itemCount="2"
                tools:layout_height="400dp"
                tools:listitem="@layout/movie_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>